fix the line string overlap about store's name

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -79,7 +79,7 @@ body {
 }
 .belement p{
 	font-size: 18px;
-	line-height: 10px;
+	line-height: 20px;
 	text-align:center;
 }
 .jumbotron .belement > a > span{
